# ChangeLog for app-emulation/spice-protocol
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.31 2013/01/12 22:02:57 cardoe Exp $

  12 Jan 2013; Doug Goldstein <cardoe@gentoo.org> -spice-protocol-0.10.0.ebuild,
  -spice-protocol-0.10.1.ebuild, -spice-protocol-0.10.3.ebuild:
  Remove older versions

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~ppc, wrt bug #449220

  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Stable for x86, wrt bug #440876

  04 Nov 2012; <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Stable for amd64, wrt bug #440876

  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.10.3.ebuild:
  Stable for amd64, wrt bug #437208

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  spice-protocol-0.10.3.ebuild:
  x86 stable wrt bug #437208

  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  Add the virtualization herd so we see the bugs.

*spice-protocol-0.12.2 (04 Oct 2012)

  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org>
  +spice-protocol-0.12.2.ebuild:
  Version bump

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  spice-protocol-0.10.1.ebuild:
  x86 stable wrt bug #407357

*spice-protocol-0.10.3 (07 Jul 2012)

  07 Jul 2012; Doug Goldstein <cardoe@gentoo.org>
  +spice-protocol-0.10.3.ebuild:
  Version bump

  15 Mar 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.10.1.ebuild: