@@ -1,5 +1,7 @@
 AUX 2ffbca210033be262fc75e6a73742e0f0e6d5242.patch 589 SHA256 467fcf46c974bf2457d56c17c035a59fb4f51be49902296719172fce4d44c34d SHA512 823fc47f136d26bd02697fd7c161c9d8745581c51d39a7d43193ea3f6192f47ace9ca9a20806c03590757668a92559865877cd4597f84d392d94f70044ed2674 WHIRLPOOL bbf37184ef6c2ba7b3ca7e4e065a0dcf5cd2b54ade4711bd7f5fabf6c9b60d532274af670df5e3e703b65fd8462b3c518a425a29152c8bbfc4e3865de0a391b5
 DIST spice-protocol-0.12.2.tar.bz2 69808 SHA256 8bb2d9e4d75c1cb2065ecf2d6607bb1f91f0df6b27ddaa70320fd1f58cd3d56c SHA512 f4a8fea522a9e0a8cbc860782f512371969dc0351ce611c8b3682af6f9f5a68ff34747cd9b048032131142875d78f66ed206ac646b29c26ba8f24680681f67c0 WHIRLPOOL 321ae4f8a03a6a079ca6f0aff27c9601be587af334662e92e0645ce6c40b9d367b8f0e2a94f9a4814b819cd94a4e7f2208c09ec006106426a5dee069fdcfd134
+DIST spice-protocol-0.12.3.tar.bz2 69854 SHA256 dc8609efe23e6f9b78d56663aa9ca5e8cb10c2b8403b8fc02aa72ae7686cc037 SHA512 55423743cf195459125305c726803db491ebf16a5ef0cb821eed7e0d71ace9d581b9a6a60c11a03d6a17c0ecc31e2b4c649ed117857a050f409844686b7df3e0 WHIRLPOOL 308ced9222f8b43e2455733fc5d311912bc9d10fbf830d8d4eecd0e86bfd6dc6a0ae15c3d94dc5c3d73aa9635247023259642c570e31557e0ba9caf4bd2c7eb6
 EBUILD spice-protocol-0.12.2.ebuild 502 SHA256 c6a6734867123080b2ab9511587e6481a57eea76ab928e1bf5893e3639e67866 SHA512 c2caadf181cc6377d64f94f65b00875048e638315fa6687af69c52fb302e791edd8d1e88a63203f709effd0aa5447e0071e29d8f9697f93022c49476d690dc8d WHIRLPOOL 8df49397392f8deb3a1e078715c118cbb1ad66446322d1efd266429349eefec7fe2f0f797f2cf73feb24d605dcdcfd5c18fef06b32dd232debbee0fb00372fec
-MISC ChangeLog 4721 SHA256 42db010b3344b541766f50405f65b04edf46de53975fb0c20079d7eaf72bfae6 SHA512 21fb68f34103bd63c5740c1ccad34a4b905c312ea7c4dfc2ce7280b0602f4c7e53ce0bba556b8710905ecb9e64913c8ad996179b8bd6f3ebf5cc9a7f1b28c7eb WHIRLPOOL 7045b9d4b8666875eac8b2a293fec3f402789fc2494c3edfa20414484317c752b78d7727916bd2b35559fbbc5102ab12918a266f74ecf958211109c61123ab36
+EBUILD spice-protocol-0.12.3.ebuild 507 SHA256 ec20bcce32ecad232f884658fcb7629e20303c70579588fa25960005739730f7 SHA512 aa637d93863f809beb2835b0340087362c04507f2af66d8244cc57ce0a71857bfc36560f97d5cd2ef4625cf20cf50683ae18c372059924fabc631fa1af93bcbf WHIRLPOOL 4bf31972ec6a132ec8e3d69fbeb94335b677bb5e7cafd0221610b3706a9964df2fafb5a864ca58518d085b56bc5f5c3df97ab587db0bc3dfec4662cac9f576f6
+MISC ChangeLog 4856 SHA256 da52ba3f75243773b5606123835df45f9de3412fdeeeb791030ac474676170d6 SHA512 fed55ba7ce9b29c4d21d4f44201e381f0d5bdbe376deb3ac68b3c8e5495d24b10cd820cbd1a00ca219018c19ffc5b3e79837ee699b8b06784d98fca62d3056cc WHIRLPOOL a898782d1fe22008b771171be20f6c87be915aa153a4a07ab1edad9392caa4c8477a84db2c3808d895f39c8b7856f7d3b8a9197540e4ed9e4919612f9cb63a6b
 MISC metadata.xml 272 SHA256 d52be94b62df0e5c6939cfdd12370b98adad2fc8e4b58bdd1f9efbe40bf91753 SHA512 46820644a5d138065112243feab6ab560aa5552074609c5b04c2fb2df2dd3f82f18c7df02963ce5b6933f2f69ca131dae9ee518f6abb153cdf3cbd588d40e683 WHIRLPOOL 17acb32f49c97ff575c9b9df53b2dc733d49b272f7f7c0da86ca3084f6f0e52114f8f4ca72f8116d636be5e46f6d0b5212c909582c434599747c5a49e94ea4db
