@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/spice-protocol
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.31 2013/01/12 22:02:57 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.32 2013/01/12 22:04:13 cardoe Exp $
+
+*spice-protocol-0.12.3 (12 Jan 2013)
+
+  12 Jan 2013; Doug Goldstein <cardoe@gentoo.org> +spice-protocol-0.12.3.ebuild:
+  Version bump
 
   12 Jan 2013; Doug Goldstein <cardoe@gentoo.org> -spice-protocol-0.10.0.ebuild,
   -spice-protocol-0.10.1.ebuild, -spice-protocol-0.10.3.ebuild:
